# vcpkg-boost

./: .gitignore  README.md  build.bat
src/: CMakeLists.txt  cmake_msvc.cmake  test.cpp
